--- a/protocole/CMakeLists.txt
+++ b/protocole/CMakeLists.txt
@@ -2,17 +2,26 @@ cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_STANDARD 17)
 
 # CONSTANTES
+set(BTTP BTTP) # Nom du projet CMake
 set(BTTP_VERSION 0.0.2) # Version du protocole
 set(BTTP_DEP OpenPGP segvcatch) # Dépendances
+set(BTTP_DOSSIER .bttp) # Dossier de travail par défaut
+set(BTTP_RACINE ${CMAKE_CURRENT_SOURCE_DIR}/include/Racine.h) # En-tête racine (fichier de configuration)
+
+# OPTIONS
+option(BTTP_DEMO "Compile la démonstration du protocole." ON)
+option(BTTP_TEST "Compile les tests du protocole." ON)
 
 # PROJET
-project(BTTP VERSION ${BTTP_VERSION})
+project(${BTTP} VERSION ${BTTP_VERSION})
 set(BTTP_LIB ${PROJECT_NAME} ${BTTP_DEP})
 
 # DEPENDANCES
 # TODO Utiliser find_package
 
 # FICHIERS
+# Configuration
+configure_file(${BTTP_RACINE}.in ${BTTP_RACINE})
 # Sources
 file(
     GLOB_RECURSE
@@ -28,11 +37,17 @@ file(
 
 # BIBLIOTHEQUE
 add_library(
-    ${PROJECT_NAME}
+    ${BTTP}
     ${BTTP_SRC}
     ${BTTP_INCLUDES}
 )
 
 # COMPLEMENTS
-add_subdirectory(demo)
-add_subdirectory(test)
+# Démonstration
+if(BTTP_DEMO)
+    add_subdirectory(demo)
+endif()
+# Tests
+if(BTTP_TEST)
+    add_subdirectory(test)
+endif()
