--- a/protocole/demo/CMakeLists.txt
+++ b/protocole/demo/CMakeLists.txt
@@ -9,11 +9,18 @@ file(
     BTTP_DEMO_SRC
     src/*.cpp
 )
+# En-têtes
+file(
+    GLOB_RECURSE
+    BTTP_DEMO_INCLUDE
+    include/*.h
+)
 
 # EXECUTABLE
 add_executable(
     ${BTTP_DEMO_EXE}
     ${BTTP_DEMO_SRC}
+    ${BTTP_DEMO_INCLUDE}
 )
 target_link_libraries(
     ${BTTP_DEMO_EXE}
