--- a/protocole/test/CMakeLists.txt
+++ b/protocole/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 # CONSTANTES
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
-set(BTTP_TEST_EXE test)
+set(BTTP_TEST_EXE bttp-test)
 set(BTTP_TEST_DEP gtest)
 
 # DEPENDANCES
