gestion fichiers (pour l'instant de manière procédurale)

--- a/client/coeur/include/Racine.h.in
+++ b/client/coeur/include/Racine.h.in
@@ -3,6 +3,20 @@
 
 #define BTTP_CLIENT_VERSION "${BTTP_CLIENT_VERSION}"
 
+#ifndef BTTP_IDENTITE_CHEMIN_DEFAUT
+    #define BTTP_IDENTITE_CHEMIN_DEFAUT BTTP_DOSSIER "/id"
+#endif
+#ifndef BTTP_IDENTITE_CHEMIN_BTTP_DEFAUT
+    #define BTTP_IDENTITE_CHEMIN_BTTP_DEFAUT true
+#endif
+#ifndef BTTP_IDENTITE_CHEMIN_CREER
+    #define BTTP_IDENTITE_CHEMIN_CREER true
+#endif
+#ifndef BTTP_IDENTITE_EXT
+    #define BTTP_IDENTITE_EXT "asc"
+#endif
+
 #include "../../../protocole/include/BTTP.h"
+#include "Contexte.h"
 
 #endif
