--- a/client/coeur/include/Racine.h.in
+++ b/client/coeur/include/Racine.h.in
@@ -3,20 +3,13 @@
 
 #define BTTP_CLIENT_VERSION "${BTTP_CLIENT_VERSION}"
 
-#ifndef BTTP_IDENTITE_CHEMIN_DEFAUT
-    #define BTTP_IDENTITE_CHEMIN_DEFAUT BTTP_DOSSIER "/id"
-#endif
-#ifndef BTTP_IDENTITE_CHEMIN_BTTP_DEFAUT
-    #define BTTP_IDENTITE_CHEMIN_BTTP_DEFAUT true
-#endif
-#ifndef BTTP_IDENTITE_CHEMIN_CREER
-    #define BTTP_IDENTITE_CHEMIN_CREER true
-#endif
-#ifndef BTTP_IDENTITE_EXT
-    #define BTTP_IDENTITE_EXT "asc"
-#endif
+// DOSSIER & FICHIER
+#define BTTP_DOSSIER "${BTTP_DOSSIER}"
+#define BTTP_IDENTITE_DOSSIER "${BTTP_DOSSIER}/${BTTP_IDENTITE_DOSSIER}" 
+#define BTTP_IDENTITE_EXT "${BTTP_IDENTITE_EXT}"
+#define BTTP_UTILISER_CONTEXTE_PAR_DEFAUT ${BTTP_UTILISER_CONTEXTE_PAR_DEFAUT}
+#define BTTP_CREATION_CHEMIN_PAR_DEFAUT ${BTTP_CREATION_CHEMIN_PAR_DEFAUT}
 
 #include "../../../protocole/include/BTTP.h"
-#include "Contexte.h"
 
 #endif
