--- a/protocole/CMakeLists.txt
+++ b/protocole/CMakeLists.txt
@@ -7,9 +7,23 @@ set(LIBRARY_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/lib)
 set(BTTP bttp) # Nom du projet CMake
 set(BTTP_VERSION 0.0.7) # Version du protocole
 set(BTTP_DEP OpenPGP segvcatch) # Dépendances
-set(BTTP_DOSSIER .bttp) # Dossier de travail par défaut
 set(BTTP_RACINE ${CMAKE_CURRENT_LIST_DIR}/include/Racine.h) # En-tête racine (fichier de configuration)
 set(BTTP_LIB ${BTTP} ${BTTP_DEP}) # Importation de la librairie et de ses dépendances
+# Paramètres
+## Identité
+if(NOT DEFINED BTTP_IDENTITE_COMMENTAIRE)
+    set(BTTP_IDENTITE_COMMENTAIRE BTTP version ${BTTP_VERSION} via calccrypto/OpenPGP) # Commentaire associé aux clés généré via BTTP
+endif()
+if(NOT DEFINED BTTP_IDENTITE_ARMOR)
+    set(BTTP_IDENTITE_ARMOR false) # Défini si les identités doivent utiliser le mode structuré (armored)
+endif()
+## Message
+if(NOT DEFINED BTTP_MESSAGE_SEP)
+    set(BTTP_MESSAGE_SEP |) # Séparateur utilisé par les messages standards
+endif()
+if(NOT DEFINED BTTP_MESSAGE_CONTROLE_SEP)
+    set(BTTP_MESSAGE_CONTROLE_SEP @) # Séparateur utilisé par les messages de controle standards
+endif()
 
 # OPTIONS
 if(NOT DEFINED BTTP_DEMO)
