--- a/protocole/include/Racine.h.in
+++ b/protocole/include/Racine.h.in
@@ -3,10 +3,13 @@
 
 #define BTTP_VERSION "${BTTP_VERSION}"
 
-#ifndef BTTP_DOSSIER
-    #define BTTP_DOSSIER "${BTTP_DOSSIER}"
-#endif
+// IDENTITE
+#define BTTP_IDENTITE_COMMENTAIRE "${BTTP_IDENTITE_COMMENTAIRE}"
+#define BTTP_IDENTITE_ARMOR ${BTTP_IDENTITE_ARMOR}
 
-#include "Contexte.h"
+// MESSAGE
+#define BTTP_MESSAGE_SEP '${BTTP_MESSAGE_SEP}'
+#define BTTP_MESSAGE_CONTROLE_SEP '${BTTP_MESSAGE_CONTROLE_SEP}'
+
 
 #endif
