suppression du namespace Coeur
= déplacement vers le namespace BTTP::Client, le coeur du client représentant en soit le client, le CLI et le GUI n'étant que des interfaces utilisateurs pour le client

--- a/client/cli/include/Racine.h.in
+++ b/client/cli/include/Racine.h.in
@@ -5,6 +5,6 @@
 
 #define BTTP_CLIENT_CLI_ENV_DOSSIER "${BTTP_CLIENT_CLI_ENV_DOSSIER}"
 
-#include "../../coeur/include/BTTP-Client.h"
+#include "../../include/BTTP-Client.h"
 
 #endif
