--- a/client/cli/CMakeLists.txt
+++ b/client/cli/CMakeLists.txt
@@ -3,6 +3,8 @@ set(BTTP_CLIENT_CLI_EXE ${BTTP}-cli) # Dossier de référence du CLI
 set(BTTP_CLIENT_CLI_VERSION 0.0.1) # Version du CLI
 set(BTTP_CLIENT_CLI_RACINE ${CMAKE_CURRENT_LIST_DIR}/include/Racine.h) # En-tête racine (fichier de configuration)
 
+// TODO Ajouter les tests comme dans protocole
+
 # Configuration
 configure_file(${BTTP_CLIENT_CLI_RACINE}.in ${BTTP_CLIENT_CLI_RACINE})
 
