--- a/serveur/CMakeLists.txt
+++ b/serveur/CMakeLists.txt
@@ -3,6 +3,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/lib)
 
+// TODO Ajouter les tests comme dans protocole
+
 # DEPENDANCES
 set(BTTP_CLIENT_CLI OFF)
 set(BTTP_CLIENT_GUI OFF)
