--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "protocole/googletest"]
 	path = protocole/test/modules/googletest
 	url = https://github.com/google/googletest.git
+[submodule "client/googletest"]
+	path = client/test/modules/googletest
+	url = https://github.com/google/googletest.git
