--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "client/googletest"]
 	path = client/test/modules/googletest
 	url = https://github.com/google/googletest.git
+[submodule "client/cli/googletest"]
+	path = client/cli/test/modules/googletest
+	url = https://github.com/google/googletest.git
