--- a/client/cli/test/CMakeLists.txt
+++ b/client/cli/test/CMakeLists.txt
@@ -7,7 +7,7 @@ set(BTTP_CLIENT_CLI_TEST_RACINE ${CMAKE_CURRENT_LIST_DIR}/include/Racine.h) # En
 set(BTTP_CLIENT_CLI_TEST_DOSSIER_TMP true) # Défini si le dossier doit être effacer à la fin des tests
 
 # DEPENDANCES
-if(NOT DEFINED GOOGLETEST_VERSION)
+if(NOT TARGET gtest)
     add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/modules/googletest)
 endif()
 
