--- a/client/include/Racine.h.in
+++ b/client/include/Racine.h.in
@@ -10,6 +10,6 @@
 #define BTTP_UTILISER_CONTEXTE_PAR_DEFAUT ${BTTP_UTILISER_CONTEXTE_PAR_DEFAUT}
 #define BTTP_CREATION_CHEMIN_PAR_DEFAUT ${BTTP_CREATION_CHEMIN_PAR_DEFAUT}
 
-#include "../../protocole/include/BTTP.h"
+#include <BTTP.h>
 
 #endif
