--- a/client/test/include/Racine.h.in
+++ b/client/test/include/Racine.h.in
@@ -2,7 +2,6 @@
 #define H_BTTP_CLIENT_TEST_RACINE
 
 #include <gtest/gtest.h>
-#include <iostream>
-#include "../../include/BTTP-Client.h"
+#include <BTTP-Client.h>
 
 #endif
