--- a/protocole/include/Racine.h.in
+++ b/protocole/include/Racine.h.in
@@ -10,6 +10,6 @@
 // MESSAGE
 #define BTTP_MESSAGE_SEP '${BTTP_MESSAGE_SEP}'
 #define BTTP_MESSAGE_CONTROLE_SEP '${BTTP_MESSAGE_CONTROLE_SEP}'
-
+#define BTTP_MESSAGE_ARGS_SEP '${BTTP_MESSAGE_ARGS_SEP}'
 
 #endif
