--- a/client/include/Racine.h.in
+++ b/client/include/Racine.h.in
@@ -3,6 +3,9 @@
 
 #define BTTP_CLIENT_VERSION "${BTTP_CLIENT_VERSION}"
 
+// RESEAU
+#define BTTP_PORT ${BTTP_PORT}
+
 // DOSSIER & FICHIER
 #define BTTP_DOSSIER "${BTTP_DOSSIER}"
 #define BTTP_IDENTITE_DOSSIER "${BTTP_DOSSIER}/${BTTP_IDENTITE_DOSSIER}" 
