classe Script + corrections

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -29,6 +29,12 @@ endif()
 if(NOT DEFINED BTTP_IDENTITE_EXT)
     set(BTTP_IDENTITE_EXT asc) # Extension de fichier des identités
 endif()
+if(NOT DEFINED BTTP_SERVEUR_DOSSIER)
+    set(BTTP_SERVEUR_DOSSIER srv) # Nom du dossier où sont stockées les serveurs enregistrés (relatif à BTTP_DOSSIER)
+endif()
+if(NOT DEFINED BTTP_SCRIPT_DOSSIER)
+    set(BTTP_SCRIPT_DOSSIER src) # Nom du dossier où sont stockées les scripts (relatif à BTTP_DOSSIER)
+endif()
 ### Valeurs par défaut
 if(NOT DEFINED BTTP_UTILISER_CONTEXTE_PAR_DEFAUT)
     set(BTTP_UTILISER_CONTEXTE_PAR_DEFAUT true) # Défini si le client doit utiliser le dossier de contexte par défaut.
