--- a/client/include/Racine.h.in
+++ b/client/include/Racine.h.in
@@ -10,6 +10,8 @@
 #define BTTP_DOSSIER "${BTTP_DOSSIER}"
 #define BTTP_IDENTITE_DOSSIER "${BTTP_DOSSIER}/${BTTP_IDENTITE_DOSSIER}" 
 #define BTTP_IDENTITE_EXT "${BTTP_IDENTITE_EXT}"
+#define BTTP_SERVEUR_DOSSIER "${BTTP_DOSSIER}/${BTTP_SERVEUR_DOSSIER}" 
+#define BTTP_SCRIPT_DOSSIER "${BTTP_DOSSIER}/${BTTP_SCRIPT_DOSSIER}" 
 #define BTTP_UTILISER_CONTEXTE_PAR_DEFAUT ${BTTP_UTILISER_CONTEXTE_PAR_DEFAUT}
 #define BTTP_CREATION_CHEMIN_PAR_DEFAUT ${BTTP_CREATION_CHEMIN_PAR_DEFAUT}
 
