--- a/client/include/Racine.h.in
+++ b/client/include/Racine.h.in
@@ -5,6 +5,7 @@
 
 // RESEAU
 #define BTTP_PORT ${BTTP_PORT}
+#define BTTP_TIMEOUT ${BTTP_TIMEOUT}
 
 // DOSSIER & FICHIER
 #define BTTP_DOSSIER "${BTTP_DOSSIER}"
