--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -10,7 +10,7 @@ include(${CMAKE_CURRENT_LIST_DIR}/../protocole/CMakeLists.txt)
 
 # CONSTANTES
 set(BTTP_CLIENT ${BTTP}-client) # Nom du projet CMake
-set(BTTP_CLIENT_VERSION 0.1.2) # Version du client
+set(BTTP_CLIENT_VERSION 0.1.3) # Version du client
 set(BTTP_CLIENT_DEP ${BTTP_LIB} pthread) # Dépendances
 set(BTTP_CLIENT_RACINE ${CMAKE_CURRENT_LIST_DIR}/include/Racine.h) # En-tête racine (fichier de configuration)
 set(BTTP_CLIENT_LIB ${BTTP_CLIENT} ${BTTP_CLIENT_DEP})
@@ -37,6 +37,9 @@ if(NOT DEFINED BTTP_SERVEUR_DOSSIER)
 endif()
 if(NOT DEFINED BTTP_SCRIPT_DOSSIER)
     set(BTTP_SCRIPT_DOSSIER src) # Nom du dossier où sont stockées les scripts (relatif à BTTP_DOSSIER)
+endif()
+if(NOT DEFINED BTTP_AUTORISATIONS_FICHIER)
+    set(BTTP_AUTORISATIONS_FICHIER autorisations) # Nom du fichier où sont stockées les clés autorisées (relatif à BTTP_DOSSIER)
 endif()
 ### Valeurs par défaut
 if(NOT DEFINED BTTP_UTILISER_CONTEXTE_PAR_DEFAUT)
