--- a/client/include/Racine.h.in
+++ b/client/include/Racine.h.in
@@ -13,6 +13,7 @@
 #define BTTP_IDENTITE_EXT "${BTTP_IDENTITE_EXT}"
 #define BTTP_SERVEUR_DOSSIER "${BTTP_DOSSIER}/${BTTP_SERVEUR_DOSSIER}" 
 #define BTTP_SCRIPT_DOSSIER "${BTTP_DOSSIER}/${BTTP_SCRIPT_DOSSIER}" 
+#define BTTP_AUTORISATIONS_FICHIER "${BTTP_AUTORISATIONS_FICHIER}" 
 #define BTTP_UTILISER_CONTEXTE_PAR_DEFAUT ${BTTP_UTILISER_CONTEXTE_PAR_DEFAUT}
 #define BTTP_CREATION_CHEMIN_PAR_DEFAUT ${BTTP_CREATION_CHEMIN_PAR_DEFAUT}
 
