--- a/client/include/Racine.h.in
+++ b/client/include/Racine.h.in
@@ -6,6 +6,8 @@
 // RESEAU
 #define BTTP_PORT ${BTTP_PORT}
 #define BTTP_TIMEOUT ${BTTP_TIMEOUT}
+#define BTTP_SERVEUR_NTP "${BTTP_SERVEUR_NTP}"
+#define BTTP_HORODOTAGE_TTL ${BTTP_HORODOTAGE_TTL}
 
 // DOSSIER & FICHIER
 #define BTTP_DOSSIER "${BTTP_DOSSIER}"
