--- a/client/cli/test/include/Racine.h.in
+++ b/client/cli/test/include/Racine.h.in
@@ -2,6 +2,6 @@
 #define H_BTTP_CLIENT_TEST_RACINE
 
 #include <gtest/gtest.h>
-#include "../../include/BTTP-CLI.h"
+#include "../../include/CLI.h"
 
 #endif
