--- a/protocole/include/Racine.h.in
+++ b/protocole/include/Racine.h.in
@@ -5,11 +5,11 @@
 
 // IDENTITE
 #define BTTP_IDENTITE_COMMENTAIRE "${BTTP_IDENTITE_COMMENTAIRE}"
-#define BTTP_IDENTITE_ARMOR ${BTTP_IDENTITE_ARMOR}
+#define BTTP_ARMOR ${BTTP_ARMOR}
 
 // MESSAGE
-#define BTTP_MESSAGE_SEP '${BTTP_MESSAGE_SEP}'
-#define BTTP_MESSAGE_CONTROLE_SEP '${BTTP_MESSAGE_CONTROLE_SEP}'
-#define BTTP_MESSAGE_ARGS_SEP '${BTTP_MESSAGE_ARGS_SEP}'
+#define BTTP_MESSAGE_SEP "${BTTP_MESSAGE_SEP}"
+#define BTTP_MESSAGE_CONTROLE_SEP "${BTTP_MESSAGE_CONTROLE_SEP}"
+#define BTTP_MESSAGE_ARGS_SEP "${BTTP_MESSAGE_ARGS_SEP}"
 
 #endif
