--- a/protocole/CMakeLists.txt
+++ b/protocole/CMakeLists.txt
@@ -14,12 +14,12 @@ set(BTTP_LIB ${BTTP} ${BTTP_DEP}) # Importation de la librairie et de ses dépen
 if(NOT DEFINED BTTP_IDENTITE_COMMENTAIRE)
     set(BTTP_IDENTITE_COMMENTAIRE "BTTP version ${BTTP_VERSION} via calccrypto/OpenPGP") # Commentaire associé aux clés généré via BTTP
 endif()
-if(NOT DEFINED BTTP_IDENTITE_ARMOR)
-    set(BTTP_IDENTITE_ARMOR false) # Défini si les identités doivent utiliser le mode structuré (armored)
+if(NOT DEFINED BTTP_ARMOR)
+    set(BTTP_ARMOR false) # Défini si les identités doivent utiliser le mode structuré (armored)
 endif()
 ## Message
 if(NOT DEFINED BTTP_MESSAGE_SEP)
-    set(BTTP_MESSAGE_SEP |) # Séparateur utilisé par les messages standards
+    set(BTTP_MESSAGE_SEP |||) # Séparateur utilisé par les messages standards
 endif()
 if(NOT DEFINED BTTP_MESSAGE_CONTROLE_SEP)
     set(BTTP_MESSAGE_CONTROLE_SEP @) # Séparateur utilisé par les messages de controle standards
