--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -69,6 +69,9 @@ flutter:
     - images/logogoogle.png
     - images/LogoRond.png
     - images/profi.jpg
+    - images/logo-sombre.png
+    - images/logo-clair.png
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
