--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -1,5 +1,5 @@
-name: bttp
-description: A new Flutter project.
+name: BTTP
+description: Utiliser des scripts sur un terminal à distance
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -43,6 +43,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/logo-clair.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
