--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - images/profi.jpg
     - images/logo-sombre.png
     - images/logo-clair.png
+    - images/logoTrans.png
 
   #   - images/a_dot_ham.jpeg
 
