--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   adaptive_theme: ^1.1.0
   flutter_svg: ^1.0.3
   image_picker: ^0.8.4+11
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
